Improve the input size hack - Remove div.inputContainer (225 dom elements less on a page) - Use clip-path instead of overflow: hidden from removed div.inputContainer - Fix input size not always filling the tile on large screens

--- a/packages/scrabble-solver/src/components/Solver/Solver.module.scss
+++ b/packages/scrabble-solver/src/components/Solver/Solver.module.scss
@@ -96,11 +96,6 @@
   min-width: 0;
 }
 
-.rackContainer {
-  display: flex;
-  justify-content: center;
-}
-
 .rack {
   border: var(--border);
 }
